# EtherGhost

./: .gitattributes  .gitignore  LICENSE  README.md  README_en.md  build.sh  docs.md  flake.nix  forward_proxy.py  guiren.css  index.html  package-lock.json  package.json  psudo_shell.py  pyinstaller_package.bat  pyproject.toml  requirements.txt  run_ether_ghost.py  test.py  test_aes_key  test_connector.py  test_sqlite.py
.github/workflows/: python-publish.yml
ether_ghost/: __init__.py  __main__.py  file_transfer_status.py  main.py  session_connector.py  session_manager.py  session_types.py  tcp_proxies.py  upload_file_status.py
ether_ghost/api/: base.py  connector.py  forward_proxy.py  session.py  sessiontype.py  settings.py  utils.py
ether_ghost/core/: __init__.py  base.py  custom_encoders.py  exceptions.py  php.py  php_decoder.py  php_session_common.py
ether_ghost/public/: index.html
ether_ghost/session_connectors/: __init__.py  reverse_shell.py
frontend/: README.md  index.html  package-lock.json  package.json
frontend-js/: index.js  package-lock.json  package.json  run_rollup.sh
guiren/: __main__.py  db.py  main.py  public  session_manager.py  session_types.py  upload_file_status.py
php_docker/: shell.php
src/: App.vue  main.js  main.py  session_manager.py
test_environment/: behinder.php  behinder_xor.php  cmd.php  index.html  myshell.php  raw.php  server.php  session.php  shell.jsp  shell.php  test.cpp  test.java  test.js  test.php  test.sh  test.yaml  test_README.md  test_proc.php  testenc.php  vessel-client.php  vessel.php
(+265 files in other folders)
